--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 <style>
-    body {background: black; font-family:arial; font-size: 14px;}
+    html, body, ul, ol, li, h1, h2, h3, h4, h5, h6, img, table {margin: 0; padding: 0; border: 0;}
+    body {background: white;}
     h1 {font-family:Arial; font-size: 35px; text-align:center;}
-    h2 {font-family:arial; font-size: 20px;}
-    table, th, td {border: 1px solid black; border-collapse: collapse;}
-    th, td {padding: 3px;text-align: center;}
+    h2 {font-family:arial; font-size: 20px; text-align:center;}
+    .text{font-family:arial; font-size: 16px; text-align: justify; max-width: 50rem; margin-right: auto; margin-left: auto;}
+    table, th, td {border: 1px solid black; border-collapse: collapse;, text-align: center; max-width: 50rem; margin-right: auto; margin-left: auto;}
+    th, td {padding: 4px;text-align: center;}
     .spoiler {color: white;}
     .spoiler:hover {color: black;}
+    .mapa {display: block; margin-left: auto; margin-right: auto;}
 </style>
