--- a/style.css
+++ b/style.css
@@ -8,8 +8,20 @@
     th, td {padding: 4px;text-align: center;}
     .spoiler {color: white;}
     .spoiler:hover {color: black;}
-    .mapa {display: block; margin-left: auto; margin-right: auto;}
+    .mapa {display: block; margin-left: auto; margin-right: auto; padding-bottom: 1rem;}
     .logo {background-size: auto;}
-    .loga img {vertical-align: middle; display: inline-block; padding-top: 4rem;}
+    .loga img {vertical-align: middle; display: inline-block; padding-top: 3rem;}
     .loga {text-align: center;}
+    .ofd {color: blue;}
+     #show,#content{display:none;}
+     #show:checked~#content{display:block;}
+     .container {display: flex; background-color: white; justify-content: center;
+      }
+      .container > div {
+        background-color: rgb(96, 189, 250);
+        margin: 10px;
+        padding: 20px;
+        font-size: 25px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
 </style>
