--- a/style.css
+++ b/style.css
@@ -4,24 +4,18 @@
     h1 {font-family:Arial; font-size: 35px; text-align:center;}
     h2 {font-family:arial; font-size: 20px; text-align:center;}
     .text{font-family:arial; font-size: 16px; text-align: justify; max-width: 50rem; margin-right: auto; margin-left: auto;}
-    table, th, td {font-family:arial; border: 1px solid black; border-collapse: collapse;, text-align: center; max-width: 50rem; margin-right: auto; margin-left: auto;}
+    table, th, td {font-family:arial; border: 1px solid black; border-collapse: collapse; text-align: center; max-width: 50rem; margin-right: auto; margin-left: auto;}
     th, td {padding: 4px;text-align: center;}
     .spoiler {color: white;}
     .spoiler:hover {color: black;}
     .mapa {display: block; margin-left: auto; margin-right: auto; padding-bottom: 1rem;}
-    .logo {background-size: auto;}
-    .loga img {vertical-align: middle; display: inline-block; padding-top: 3rem;}
+    .logo {width: 100%; background-position:center; background-repeat: no-repeat; background-size: cover;}
+    .loga img {vertical-align: middle; display: inline-block; padding-top: 2rem;}
     .loga {text-align: center;}
     .ofd {color: blue;}
-     #show,#content{display:none;}
-     #show:checked~#content{display:block;}
-     .container {display: flex; background-color: white; justify-content: center;
-      }
-      .container > div {
-        background-color: rgb(96, 189, 250);
-        margin: 10px;
-        padding: 20px;
-        font-size: 25px;
-        font-family: Arial, Helvetica, sans-serif;
-      }
+    #show,#content{display:none;}
+    #show:checked~#content{display:block;}
+    .container {display: flex; background-color: white; justify-content: center}
+    .container > div {background-color: rgb(96, 189, 250); margin: 10px; padding: 20px; font-size: 25px; font-family: Arial, Helvetica, sans-serif;}
+    .vtextu {float: right; margin-left:15px;}
 </style>
