--- a/style.css
+++ b/style.css
@@ -1,21 +1,154 @@
-<style>
-    html, body, ul, ol, li, h1, h2, h3, h4, h5, h6, img, table {margin: 0; padding: 0; border: 0;}
-    body {background: white;}
-    h1 {font-family:Arial; font-size: 35px; text-align:center;}
-    h2 {font-family:arial; font-size: 20px; text-align:center;}
-    .text{font-family:arial; font-size: 16px; text-align: justify; max-width: 60rem; margin-right: auto; margin-left: auto;}
-    table, th, td {font-family:arial; border: 1px solid black; border-collapse: collapse; text-align: center; max-width: 50rem; margin-right: auto; margin-left: auto;}
-    th, td {padding: 4px;text-align: center;}
-    .spoiler {color: white;}
-    .spoiler:hover {color: black;}
-    .mapa {display: block; margin-left: auto; margin-right: auto; padding-bottom: 1rem;}
-    .logo {width: 100%; background-position:center; background-repeat: no-repeat; background-size: cover;}
-    .loga img {vertical-align: middle; display: inline-block; padding-top: 2rem;}
-    .loga {text-align: center;}
-    .ofd {color: blue;}
-    #show,#content{display:none;}
-    #show:checked~#content{display:block;}
-    .container {display: flex; background-color: white; justify-content: center}
-    .container > div {background-color: rgb(96, 189, 250); margin: 10px; padding: 20px; font-size: 25px; font-family: Arial, Helvetica, sans-serif;}
-    .vtextu {float: right; margin-left:15px;}
-</style>
+    html, body, ul, ol, li, h1, h2, h3, h4, h5, h6, img, table {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+    body {
+        background: white;
+    }
+    h1 {
+        font-family:Arial;
+        font-size: 35px;
+        text-align:center;
+    }
+    h2 {
+        font-family:arial;
+        font-size: 20px;
+        text-align:center;
+    }
+    .text{
+        font-family:arial;
+        font-size: 16px;
+        text-align: justify;
+        max-width: 60rem;
+        margin-right: auto;
+        margin-left: auto;
+        
+    }
+    table, th, td {
+        font-family:arial;
+        border: 1px solid black;
+        border-collapse: collapse;
+        text-align: center;
+        max-width: 50rem;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    @media all and (max-width: 800px) {
+        .table, th, td {
+          /* When on medium sized screens, we center it by evenly distributing empty space around items */
+          justify-content: space-around;
+        }
+      }
+    
+    th, td {
+        padding: 4px;
+        text-align: center;
+    }
+    .spoiler {
+        color: white;
+    }
+    .spoiler:hover {
+        color: black;
+    }
+    .mapa {
+        display: block;
+        margin-left: auto; 
+        Margin-right: auto;
+        padding-bottom: 1rem;
+    }
+    .logo {
+        width: 100%;
+        height: auto;
+        background-position:center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .loga img {
+        vertical-align: middle;
+        display: inline-block;
+        padding-top: 2rem;}
+    .minilogo1 {
+        height: auto;
+        width: auto;
+        max-width: 100px;
+        max-height: 100px;
+    }
+    .minilogo2 {
+        height: auto;
+        width: auto;
+        max-width: 150px;
+        max-height: 150px;
+    }
+    .map {
+        height: auto;
+        width: auto;
+        max-width: 150px;
+        max-height: 150px;
+    }
+    .loga {
+        text-align: center;
+    }
+    .ofd {
+        color: blue;
+    }
+    #show,#content {
+        display:none;
+    }
+    #show:checked~#content {
+        display:block;
+    }
+    .container {
+        display: flex;
+        background-color: white;
+        justify-content: center;
+        list-style: none;
+        flex-flow: row wrap;
+        margin: 0; 
+
+    }
+    .container > li {
+        background-color: rgb(96, 189, 200);
+        margin: 10px;
+        font-size: 25px;
+        display:block;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .container a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+    }
+
+    .container > li:hover {
+        background-color: rgb(96, 189, 255);
+    }
+
+    .vtextu {
+        float: right;
+        margin-left:15px;
+        height: auto;
+        width: auto;
+        max-width: 341px;
+        max-height: 228px
+    }
+    .map-wrapper {
+        margin-left: auto; margin-right: auto;
+        position: relative;
+        max-width: 60rem;
+        padding-top: 30rem;
+      }  
+    #map {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+      
+
