--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
     html, body, ul, ol, li, h1, h2, h3, h4, h5, h6, img, table {
         margin: 0;
         padding: 0;
-        border: 0;
-        padding-right: 5px;
-        padding-left: 5px;
+        border: 0;  
     }
     body {
         background: white;
@@ -27,9 +25,37 @@
         margin-left: auto;
         
     }
+    .button {
+        display: flex;
+        background-color: white;
+        justify-content: center;
+        list-style: none;
+        flex-flow: row wrap;
+        margin-top:15px; 
+
+    }
+    .button > li {
+        background-color: #44c1e7;
+        margin: 10px;
+        font-size: 25px;
+        display:block;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .button a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+    }
+
+    .button > li:hover {
+        background-color: rgb(96, 189, 255);
+    }
+  
     table, th, td {
         font-family:arial;
-        border: 1px solid black;
+        border-bottom: 1px solid black;
         border-collapse: collapse;
         text-align: center;
         max-width: 50rem;
@@ -37,18 +63,26 @@
         margin-left: auto;
     }
 
-    @media all and (max-width: 800px) {
-        .table, th, td {
-          /* When on medium sized screens, we center it by evenly distributing empty space around items */
-          justify-content: space-around;
-        }
-      }
-    
     th, td {
-        padding: 4px;
+        padding: 2px;
+        padding-top: 7px;
+        padding-bottom: 7px;
         text-align: center;
     }
+
+    th {
+        background-color: #44c1e7;
+        color: white;
+        padding-right: 60px;
+        padding-left: 60px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+      }
+
+    tr:nth-child(even) {background-color: #f2f2f2;}
+
     .spoiler {
+        text-align: center;
         color: white;
     }
     .spoiler:hover {
@@ -102,19 +136,20 @@
         display:block;
     }
     .container {
-        display: flex;
-        background-color: white;
-        justify-content: center;
-        list-style: none;
-        flex-flow: row wrap;
-        margin: 0; 
+        height: 50px;
+        background-color: #44c1e7;
+        margin-bottom: 25px;
+        padding-left:5px; 
+        padding-right:5px
+        
 
     }
     .container > li {
-        background-color: rgb(96, 189, 200);
-        margin: 10px;
-        font-size: 25px;
-        display:block;
+        padding: 0px;
+        text-decoration: none;
+        display: block;
+        float: left;
+        color: #061c46;
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -150,5 +185,57 @@
       bottom: 0;
       left: 0;
     }
+    .leaflet-popup-content {
+        max-height: 50vh;
+        overflow: auto;
+    }
+   
+    
+    .marker-cluster-small {
+        vertical-align: middle;
+        line-height: 40px;       
+        text-align: center;
+        background-color: rgba(240, 230, 160, 0.9);
+        }
+    
+    
+    .marker-cluster-medium {
+        vertical-align: middle;
+        line-height: 40px;   
+        text-align: center;
+        background-color: rgba(206, 127, 24, 0.9);
+        }
+    
+    
+    .marker-cluster-large {
+        vertical-align: middle;
+        line-height: 40px;   
+        text-align: center;
+        background-color: rgba(172, 36, 36, 0.9);
+        }
+
+    .legend {
+        line-height: 18px;
+        color: #555;
+    }
+    .legend i {
+        width: 18px;
+        height: 18px;
+        float: left;
+        margin-right: 8px;
+        opacity: 0.7;
+    }
+
+    .info {
+        padding: 3px 3px;
+        font: Arial, Helvetica, sans-serif;
+        background: white;
+        background: rgba(255,255,255,0.8);
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        border-radius: 5px;
+    }
+
+    
+    
       
 
