--- a/style_2.css
+++ b/style_2.css
@@ -37,7 +37,7 @@
     }
 
     th {
-        background-color: #4CAA50;
+        background-color: #44c1e7;
         color: white;
         padding-right: 10px;
         padding-left: 10px;
@@ -110,7 +110,7 @@
 
     }
     .container > li {
-        background-color: rgb(96, 189, 200);
+        background-color: #44c1e7;
         margin: 10px;
         font-size: 25px;
         display:block;
