--- a/style.css
+++ b/style.css
@@ -2,29 +2,39 @@
         margin: 0;
         padding: 0;
         border: 0;  
-    }
+        }
+
     body {
         background: white;
-    }
+        }
+
     h1 {
         font-family:Arial;
         font-size: 35px;
-        text-align:center;
-    }
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+        }
+
     h2 {
         font-family:arial;
         font-size: 20px;
         text-align:center;
-    }
-    .text{
+        
+        }
+
+    .text {
         font-family:arial;
         font-size: 16px;
         text-align: justify;
         max-width: 60rem;
         margin-right: auto;
         margin-left: auto;
-        
-    }
+        }
+    
+    
+    
+
     .button {
         display: flex;
         background-color: white;
@@ -32,43 +42,42 @@
         list-style: none;
         flex-flow: row wrap;
         margin-top:15px; 
+        }
 
-    }
     .button > li {
         background-color: #44c1e7;
         margin: 10px;
         font-size: 25px;
         display:block;
         font-family: Arial, Helvetica, sans-serif;
-    }
+        }
 
     .button a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white;
-    }
+        text-decoration: none;
+        display: block;
+        padding: 1em;
+        color: white;
+        }
 
     .button > li:hover {
         background-color: rgb(96, 189, 255);
-    }
+        }
   
     table, th, td {
         font-family:arial;
         border-bottom: 1px solid black;
         border-collapse: collapse;
         text-align: center;
-        max-width: 50rem;
         margin-right: auto;
         margin-left: auto;
-    }
+        }
 
     th, td {
         padding: 2px;
         padding-top: 7px;
         padding-bottom: 7px;
         text-align: center;
-    }
+        }
 
     th {
         background-color: #44c1e7;
@@ -77,135 +86,217 @@
         padding-left: 60px;
         padding-top: 15px;
         padding-bottom: 15px;
-      }
+        }
+
+    @media screen and (max-width:995px) {
+        .text {
+            max-width: 80%
+            }
+        table {
+            max-width: 80%;
+        }   
+    }
+
+    @media screen and (max-width:580px) {
+        table {
+            margin-left:20px;
+            margin-right:20px;
+        }   
+    }
 
     tr:nth-child(even) {background-color: #f2f2f2;}
+
+    @media screen and (max-width:995px) {
+        .text {
+            max-width: 80%
+            }
+        .table {
+            max-width: 30rem;
+            }
+    }
 
     .spoiler {
         text-align: center;
         color: white;
-    }
+        }
+
     .spoiler:hover {
         color: black;
-    }
+        }
+    
     .mapa {
         display: block;
         margin-left: auto; 
         Margin-right: auto;
         padding-bottom: 1rem;
-    }
+        }
+
     .logo {
         width: 100%;
         height: auto;
         background-position:center;
         background-repeat: no-repeat;
         background-size: cover;
-    }
+        }
+
     .loga img {
         vertical-align: middle;
         display: inline-block;
-        padding-top: 2rem;}
+        padding-top: 2rem;
+        }
+
     .minilogo1 {
         height: auto;
         width: auto;
         max-width: 100px;
         max-height: 100px;
-    }
+        }
+
     .minilogo2 {
         height: auto;
         width: auto;
         max-width: 150px;
         max-height: 150px;
-    }
-    .map {
-        height: auto;
-        width: auto;
-        max-width: 150px;
-        max-height: 150px;
-    }
+        }
+
     .loga {
         text-align: center;
-    }
-    .ofd {
-        color: blue;
-    }
+        }
+
     #show,#content {
         display:none;
-    }
+        }
+
     #show:checked~#content {
         display:block;
-    }
-    .container {
-        height: 50px;
+        }
+
+    .topnav {
+        overflow: hidden;
         background-color: #44c1e7;
-        margin-bottom: 25px;
-        padding-left:5px; 
-        padding-right:5px
-        
-
-    }
-    .container > li {
-        padding: 0px;
-        text-decoration: none;
-        display: block;
+        margin-bottom: 20px
+       }
+          
+    .topnav a {
         float: left;
-        color: #061c46;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .container a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white;
-    }
-
-    .container > li:hover {
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        font-family:arial;
+        }
+    
+    .topnav a:hover {
         background-color: rgb(96, 189, 255);
+        }
+          
+    .topnav a.active {
+        color: white;
     }
+    
+    .topnav .icon {
+        display: none;
+    }
+    
+    @media screen and (max-width: 550px) {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+            float: right;
+            display: block;
+      }
+    }
+    
+    @media screen and (max-width: 550px) {
+      .topnav.responsive {position: relative;}
+            .topnav.responsive .icon {
+              position: absolute;
+              right: 0;
+              top: 0;
+            }
+            .topnav.responsive a {
+              float: none;
+              display: block;
+              text-align: left;
+            }
+          }
+  
 
     .vtextu {
         float: right;
         margin-left:15px;
         height: auto;
         width: auto;
-        max-width: 341px;
-        max-height: 228px
+        max-width: 307px;
+        max-height: 205px;
+        margin-top: 10px;
+        margin-bottom: 5px;
+        }
+    
+    @media screen and (max-width:621px) {
+        .vtextu {   
+        display:block;
+        float:none;
+        position:relative;
+        margin-left:auto;
+        margin-right:auto;
+        margin-bottom: 0px;
+
+        }
+    }    
+        
+    @media screen and (max-width:430px) {
+        .vtextu {
+        max-width: 99%;
+        float:none;
+        margin-left: auto;
+        margin-right: auto;
+        }
     }
+    
+     
+
     .map-wrapper {
         margin-left: auto; margin-right: auto;
         position: relative;
         max-width: 60rem;
         padding-top: 30rem;
-      }  
+        }  
+
     #map {
       position: absolute;
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
+        }
+
+    @media screen and (max-width:995px) {
+        .map-wrapper {
+        max-width: 80%;
+        }
     }
+
+
     .leaflet-popup-content {
         max-height: 50vh;
         overflow: auto;
-    }
-   
+        }
     
     .marker-cluster-small {
         vertical-align: middle;
         line-height: 40px;       
         text-align: center;
         background-color: rgba(240, 230, 160, 0.9);
-        }
-    
+        }   
     
     .marker-cluster-medium {
         vertical-align: middle;
         line-height: 40px;   
         text-align: center;
         background-color: rgba(206, 127, 24, 0.9);
-        }
-    
+        }   
     
     .marker-cluster-large {
         vertical-align: middle;
@@ -217,14 +308,15 @@
     .legend {
         line-height: 18px;
         color: #555;
-    }
+        }
+
     .legend i {
         width: 18px;
         height: 18px;
         float: left;
         margin-right: 8px;
         opacity: 0.7;
-    }
+        }
 
     .info {
         padding: 3px 3px;
@@ -233,9 +325,4 @@
         background: rgba(255,255,255,0.8);
         box-shadow: 0 0 15px rgba(0,0,0,0.2);
         border-radius: 5px;
-    }
-
-    
-    
-      
-
+        }
